first_daemon-set-yml.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: first-daemon-set
spec: 
  template:
    metadata:
      labels:
        system: ds-first-1
    spec:
      containers: 
      - name: nginx
        image: nginx:1.15.0
        ports:
        - containerPort: 80
