my-pod-empty-dir-volume-yml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: dev
spec:
  containers:
  - image: busybox
    name: busy
    command:
      - sleep
      - "3600"
    volumeMounts:
    - mountPath: /dados
      name: dados-dev
  volumes:
  - name: dados-dev
    emptyDir: {}
