pod_limitrange-hml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: limit-pod
spec:
  containers:
  - name: meu-container-limitado
    image: nginx
