second_daemon-set-yml.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: second-daemon-set
spec: 
  template:
    metadata:
      labels:
        system: ds-second-2
    spec:
      containers: 
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
  updateStrategy:
    type: RollingUpdate
