first_service_yml.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-cluster-ip
  namespace: default
spec:
  ports:
  - port: 80      
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-errado
  sessionAffinity: ClientIP
  type: ClusterIP
