first_service_yml_load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-load-balancer
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32413
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  sessionAffinity: None
  type: LoadBalancer
