svc-default-backend-yml-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
spec:
  selector:
    app: default-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    type: NodePort
